@@ -1,3 +1,9 @@
+bzr development version
+
+  IMPROVEMENTS:
+
+    * Add info on standalone branches without a working tree.  (Olaf Conradi)
+
 bzr 0.8  2006-05-08
 
   NOTES WHEN UPGRADING:
